Adding two links in head element to deal with conditional comments

--- a/myadvancedpage.html
+++ b/myadvancedpage.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
   <title>My advanced web page</title>
-
+  <link href="everything.css" rel="stylesheet">
+  <!--[if IE]><link href="stupidie.css" rel="stylesheet"><![endif]-->
 </head>
  <body>
  	<h1>This page will discusses various elements found in HTML5</h1>
@@ -16,6 +17,6 @@
 </blockquote>
 
 <p>The person being quoted is clearly American because, for some odd reason, they pluralise "Lego".</p>
-
- </body>	
+ 
+</body>	
 </html>
