--- a/myadvancedpage.html
+++ b/myadvancedpage.html
@@ -18,5 +18,53 @@
 
 <p>The person being quoted is clearly American because, for some odd reason, they pluralise "Lego".</p>
  
+<h2>Polished tables</h2>
+
+<table>
+	 <caption>Locust mating habits</caption>
+    <colgroup>
+        <col>
+        <col class="alternative">
+        <col>
+    </colgroup>
+    <tr>
+        <td>This</td>
+        <td>That</td>
+        <td>The other</td>
+    </tr>
+    <tr>
+        <td>Ladybird</td>
+        <td>Locust</td>
+        <td>Lunch</td>
+    </tr>
+</table>
+
+
+<table>
+	<caption>An table with Headers and Footers</caption>
+    <thead>
+        <tr>
+            <td>Header 1</td>
+            <td>Header 2</td>
+            <td>Header 3</td>
+        </tr>
+    </thead>
+    <tfoot>
+        <tr>
+            <td>Footer 1</td>
+            <td>Footer 2</td>
+            <td>Footer 3</td>
+        </tr>
+    </tfoot>
+    <tbody>
+        <tr>
+            <td>Cell 1</td>
+            <td>Cell 2</td>
+            <td>Cell 3</td>
+        </tr>
+        <!-- etc. -->
+    </tbody>
+</table>
+
 </body>	
 </html>
