separating the two tables to be clearly visible

--- a/myadvancedpage.html
+++ b/myadvancedpage.html
@@ -39,9 +39,9 @@
     </tr>
 </table>
 
-
+<br /><br />
 <table>
-	<caption>An table with Headers and Footers</caption>
+	<caption>Table with Headers and Footers</caption>
     <thead>
         <tr>
             <td>Header 1</td>
