creating more accessible links

--- a/myadvancedpage.html
+++ b/myadvancedpage.html
@@ -65,6 +65,34 @@
         <!-- etc. -->
     </tbody>
 </table>
+<br>
+  <h2>Tabbing</h2>
+
+<ul>
+    <li><a href="here.html" tabindex="1">Here</a></li>
+    <li><a href="there.html" tabindex="3">There</a></li>
+    <li><a href="limbo.html" tabindex="2">Limbo</a></li>
+</ul>
+<br>
+<h2>Titled link</h2>
+<p>I'm really bad at writing link text. <a href="inept.html" title="Why I'm rubbish at writing link text: An explanation and an apology.">Click here</a> to find out more.</p>
+<br>
+<h2>Accesskeys link</h2>
+<a href="somepage.html" accesskey="s">Some page</a>
+<br>
+<h2>Skip some HTML link</h2>
+<header>
+    <h3>The Heading</h3>
+    <a href="#content">Skip to content</a>
+</header> 
+
+<nav>
+    <!--loads of navigation stuff -->
+</nav>
+
+<section id="content">
+    <!--lovely content -->
+</section>
 
 </body>	
 </html>
