--- a/myadvancedpage.html
+++ b/myadvancedpage.html
@@ -127,7 +127,13 @@
         <option value="mex">Mexico</option>
         <option value="usa">USA</option>
     </optgroup>
-</select>
-
+</select><br>
+<h2>Additional input types</h2>
+<label>search box</label><input type="search" name="search"><br><br>
+<label>tel number</label><input type="tel" name="telephone_number"><br><br>
+<label>web address</label><input type="url" name="web_address"><br><br>
+<label>email</label><input type="email" name="email_address"><br><br>
+<label>range</label><input type="range" name="temperature" min="15" max="25" step="0.5" value="18.5"><b><br>
+<label>color box</label><input name="color" type="color" value="#ff8800"><br><br>
 </body>	
 </html>
