Adding embedded video and audio to a page

--- a/myadvancedpage.html
+++ b/myadvancedpage.html
@@ -153,6 +153,27 @@
     <option value="Austria">
     <option value="Azerbaijan">
     <!-- etc. -->
-</datalist>
+</datalist><br><br>
+<h2>video embeded to browser</h2>
+<video src="video_name.mp4" poster="file://D:\PICTURES\Man U\oouch.jpg" width="300" height="200" loop muted autoplay controls>
+</video><br><br>
+<h2>Alternative content</h2>
+<video controls>
+    <source src="kitties.mp4" type="video/mp4; codecs='avc1, mp4a'">
+    <source src="kitties.webm" type="video/webm; codecs='vp8.0, vorbis'">
+    <p>Browser no likey HTML 5.</p>
+</video><br><br>
+
+<h2>Audio </h2>
+
+<audio src="Miley Cyrus - Wrecking Ball.mp3" autoplay controls>
+    Your stupid browser doesn't support HTML 5 audio.
+</audio><br><br>
+
+<h2>Canvas</h2>
+<canvas id="wittykitty" width="800" height="450">
+    <!-- Fall-back content here, just like with video and audio -->
+</canvas>
+
 </body>	
 </html>
