Adding a loop for audio to loop

--- a/myadvancedpage.html
+++ b/myadvancedpage.html
@@ -166,7 +166,7 @@
 
 <h2>Audio </h2>
 
-<audio src="Miley Cyrus - Wrecking Ball.mp3" autoplay controls>
+<audio src="Miley Cyrus - Wrecking Ball.mp3" loop autoplay controls>
     Your stupid browser doesn't support HTML 5 audio.
 </audio><br><br>
 
